Fix Plans & Reasons spacing

--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -106,4 +106,13 @@
   .plans > :nth-child(2) {
     transform: none;
   }
+
+  .plans-header {
+    flex-direction: column;
+    gap: 1rem;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+  }
 }
